--- a/_config.yml
+++ b/_config.yml
@@ -543,15 +543,15 @@ busuanzi_count:
   # count values only if the other configs are false
   enable: true
   # custom uv span for the whole site
-  site_uv: false
+  site_uv: true
   site_uv_header: <i class="fa fa-user"> 访客数 </i>
   site_uv_footer: 人次
   # custom pv span for the whole site
-  site_pv: false
+  site_pv: true
   site_pv_header: <i class="fa fa-eye"> 总访问量 </i>
   site_pv_footer: 次
   # custom pv span for one page only
-  page_pv: false
+  page_pv: true
   page_pv_header: <i class="fa fa-file-o"> 本文阅读量 </i>
   page_pv_footer: 次
 
